fix graphic alignement

--- a/frontend/src/app/teams/new-team/team-member-card/team-member-card.component.scss
+++ b/frontend/src/app/teams/new-team/team-member-card/team-member-card.component.scss
@@ -6,29 +6,18 @@
         width: 98%;
         padding-right: 15px;
         margin: 0 auto;
-        display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-between;
 
         .mat-mdc-card-header, 
         .mat-mdc-card-title-group {
             align-items: center;
             padding: 0;
-            width: auto;
             justify-content: unset;
 
             img {
                 order: -1;
             }
-        }
-
-        .mat-mdc-card-header {
-            width: 60%;
-        }
-
-        .mat-mdc-card-title-group {
-            width: 40%;
         }
 
         .mdc-card__actions {
