--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -173,11 +173,11 @@ p {
 /* Display options */
 .d {
   &-flex {
-    display: flex;
+    display: flex !important;
   }
 
   &-block {
-    display: block;
+    display: block !important;
   }
 }
 
